--- a/src/app/components/shared/loading-indicator/loading-indicator.component.html
+++ b/src/app/components/shared/loading-indicator/loading-indicator.component.html
@@ -1,5 +1,5 @@
 <img 
   class="loading" 
-  src='../../../assets/utls/load.png'
+  src='../../../../../assets/utls/load.png'
   [ngClass]='getSize()'
 >
