--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -32,7 +32,7 @@
 </div>
 
 <!-- select size modal -->
-<es-modal id='select-attrs' width='700'>
+<es-modal id='select-attrs' width='700' height='75%'>
     <items-scroll>
         <div class="chose-attrs-modal">
             <h2 class="text text-center">Доп параметры</h2>
