--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -56,12 +56,11 @@
     width: 100%;
     text-align: center;
     height: 70px;
-    top: 25px;
+    padding-top: 25px;
     position: relative;
 }
 
 .chose-attrs-modal{
     position: relative;
     height: 90%;
-    overflow: auto;
 }
