--- a/src/app/components/feature/product-attribute-selector/product-attribute-selector.component.html
+++ b/src/app/components/feature/product-attribute-selector/product-attribute-selector.component.html
@@ -1,17 +1,18 @@
 <div class="attribute-selector">
 
     <div class="control" *ngIf='product && product.Attributes && product.Attributes.length > 0'>
-        <div *ngFor='let attr of product.Attributes'>
+        <div *ngFor='let attr of product.Attributes  | userAttributes'>
             <div class="size-chooser" [class.invalid]='isInvalid'>
                 <div class="preview">
-                    <img src='https://via.placeholder.com/300' />
+                    <img src={{getPreviewUrl(product)}} />
                 </div>
                 <div class="content text">
                     <p>{{product.Name}}</p>
                     <span>{{getAttrName(attr)}}</span>
                     <div class="input-group">
                         <label *ngFor='let aVal of attr.Values' class="size-radio">
-                            <input type="radio" [(ngModel)]="attr.Selected" (change)="isValidVals()" [name]="product.Name" [value]="aVal" />
+                            <input type="radio" [(ngModel)]="attr.Selected" (change)="isValidVals()" [name]="product.Name"
+                                [value]="aVal" />
                             <div>{{aVal}}</div>
                         </label>
                     </div>
