Attemp to make video autoplayed

--- a/src/app/components/shared/static-video-background/static-video-background.component.html
+++ b/src/app/components/shared/static-video-background/static-video-background.component.html
@@ -1,5 +1,5 @@
 <div class="holder">
-    <video autoplay muted loop [ngStyle]="{'opacity': opacity}">
+    <video #vidos autoplay muted loop [ngStyle]="{'opacity': opacity}">
         <source src="../../../assets/videos/RASTAKHAN_COON_ARENA_1.webm" type="video/webm">
     </video>
 </div>
