Move assets to subFoldier

--- a/src/app/features/navbar-header/navbar-header.component.html
+++ b/src/app/features/navbar-header/navbar-header.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="ncol-mid">
         &nbsp;
-        <img class="logo" src="/assets/logo.png" />
+        <img class="logo" src="assets/logo.png" />
       </div>
       <div class="ncol">
         <button class="btn" routerLink="/delivery">Доставка</button>
