--- a/src/app/features/navbar-header/navbar-header.component.html
+++ b/src/app/features/navbar-header/navbar-header.component.html
@@ -15,7 +15,7 @@
         <button class="btn" routerLink="/delivery">Доставка</button>
       </div>
       <div class="ncol">
-        <button class="btn" routerLink="/cart">Корзина ({{_itemsInCart}})</button>
+        <button class="btn" routerLink="/cart">Корзина ({{itemsInCart}})</button>
       </div>
     </div>
   </div>
